Bump vertx.version from 4.5.15 to 5.0.1 (#4900)